// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders when a new stack is passed in as props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Progress
    stack={
      Object {
        "category": "basics 1",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <View
            style={
              Object {
                "borderColor": "#F5E663",
                "borderRadius": 5,
                "borderWidth": 2,
                "height": 20,
                "marginTop": 15,
                "width": 260,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#F5E663",
                  "borderColor": "#F5E663",
                  "borderLeftWidth": 2,
                  "borderRadius": 2,
                  "height": 16,
                  "width": "NaN%",
                }
              }
            />
          </View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "alignSelf": "flex-end",
                "color": "#FFF",
                "fontSize": 20,
                "marginLeft": 15,
              }
            }
          >
             pts
          </Text>
        </View>,
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "alignSelf": "flex-start",
              "color": "#FFF",
              "marginLeft": 60,
              "marginTop": 5,
            }
          }
        >
          basics 1
          : 
          NaN%
        </Text>,
      ],
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "#B47AEA",
        "display": "flex",
        "height": 63,
        "justifyContent": "center",
        "overflow": "hidden",
        "position": "absolute",
        "top": 0,
        "width": "100%",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "borderColor": "#F5E663",
                  "borderRadius": 5,
                  "borderWidth": 2,
                  "height": 20,
                  "marginTop": 15,
                  "width": 260,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#F5E663",
                    "borderColor": "#F5E663",
                    "borderLeftWidth": 2,
                    "borderRadius": 2,
                    "height": 16,
                    "width": "NaN%",
                  }
                }
              />
            </View>,
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "alignSelf": "flex-end",
                  "color": "#FFF",
                  "fontSize": 20,
                  "marginLeft": 15,
                }
              }
            >
               pts
            </Text>,
          ],
          "style": Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <View
                style={
                  Object {
                    "backgroundColor": "#F5E663",
                    "borderColor": "#F5E663",
                    "borderLeftWidth": 2,
                    "borderRadius": 2,
                    "height": 16,
                    "width": "NaN%",
                  }
                }
              />,
              "style": Object {
                "borderColor": "#F5E663",
                "borderRadius": 5,
                "borderWidth": 2,
                "height": 20,
                "marginTop": 15,
                "width": 260,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "style": Object {
                  "backgroundColor": "#F5E663",
                  "borderColor": "#F5E663",
                  "borderLeftWidth": 2,
                  "borderRadius": 2,
                  "height": 16,
                  "width": "NaN%",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": Array [
                undefined,
                " pts",
              ],
              "ellipsizeMode": "tail",
              "style": Object {
                "alignSelf": "flex-end",
                "color": "#FFF",
                "fontSize": 20,
                "marginLeft": 15,
              },
            },
            "ref": null,
            "rendered": Array [
              undefined,
              " pts",
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": Array [
            "basics 1",
            ": ",
            "NaN%",
          ],
          "ellipsizeMode": "tail",
          "style": Object {
            "alignSelf": "flex-start",
            "color": "#FFF",
            "marginLeft": 60,
            "marginTop": 5,
          },
        },
        "ref": null,
        "rendered": Array [
          "basics 1",
          ": ",
          "NaN%",
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                Object {
                  "borderColor": "#F5E663",
                  "borderRadius": 5,
                  "borderWidth": 2,
                  "height": 20,
                  "marginTop": 15,
                  "width": 260,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#F5E663",
                    "borderColor": "#F5E663",
                    "borderLeftWidth": 2,
                    "borderRadius": 2,
                    "height": 16,
                    "width": "NaN%",
                  }
                }
              />
            </View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "alignSelf": "flex-end",
                  "color": "#FFF",
                  "fontSize": 20,
                  "marginLeft": 15,
                }
              }
            >
               pts
            </Text>
          </View>,
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "alignSelf": "flex-start",
                "color": "#FFF",
                "marginLeft": 60,
                "marginTop": 5,
              }
            }
          >
            basics 1
            : 
            NaN%
          </Text>,
        ],
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "#B47AEA",
          "display": "flex",
          "height": 63,
          "justifyContent": "center",
          "overflow": "hidden",
          "position": "absolute",
          "top": 0,
          "width": "100%",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View
                style={
                  Object {
                    "borderColor": "#F5E663",
                    "borderRadius": 5,
                    "borderWidth": 2,
                    "height": 20,
                    "marginTop": 15,
                    "width": 260,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "#F5E663",
                      "borderColor": "#F5E663",
                      "borderLeftWidth": 2,
                      "borderRadius": 2,
                      "height": 16,
                      "width": "NaN%",
                    }
                  }
                />
              </View>,
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "alignSelf": "flex-end",
                    "color": "#FFF",
                    "fontSize": 20,
                    "marginLeft": 15,
                  }
                }
              >
                 pts
              </Text>,
            ],
            "style": Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <View
                  style={
                    Object {
                      "backgroundColor": "#F5E663",
                      "borderColor": "#F5E663",
                      "borderLeftWidth": 2,
                      "borderRadius": 2,
                      "height": 16,
                      "width": "NaN%",
                    }
                  }
                />,
                "style": Object {
                  "borderColor": "#F5E663",
                  "borderRadius": 5,
                  "borderWidth": 2,
                  "height": 20,
                  "marginTop": 15,
                  "width": 260,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "style": Object {
                    "backgroundColor": "#F5E663",
                    "borderColor": "#F5E663",
                    "borderLeftWidth": 2,
                    "borderRadius": 2,
                    "height": 16,
                    "width": "NaN%",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": Array [
                  undefined,
                  " pts",
                ],
                "ellipsizeMode": "tail",
                "style": Object {
                  "alignSelf": "flex-end",
                  "color": "#FFF",
                  "fontSize": 20,
                  "marginLeft": 15,
                },
              },
              "ref": null,
              "rendered": Array [
                undefined,
                " pts",
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": Array [
              "basics 1",
              ": ",
              "NaN%",
            ],
            "ellipsizeMode": "tail",
            "style": Object {
              "alignSelf": "flex-start",
              "color": "#FFF",
              "marginLeft": 60,
              "marginTop": 5,
            },
          },
          "ref": null,
          "rendered": Array [
            "basics 1",
            ": ",
            "NaN%",
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`it renders when a new stack is passed in as props 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Progress
    stack={
      Object {
        "category": "verbs",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <View
            style={
              Object {
                "borderColor": "#F5E663",
                "borderRadius": 5,
                "borderWidth": 2,
                "height": 20,
                "marginTop": 15,
                "width": 260,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#F5E663",
                  "borderColor": "#F5E663",
                  "borderLeftWidth": 2,
                  "borderRadius": 2,
                  "height": 16,
                  "width": "NaN%",
                }
              }
            />
          </View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "alignSelf": "flex-end",
                "color": "#FFF",
                "fontSize": 20,
                "marginLeft": 15,
              }
            }
          >
             pts
          </Text>
        </View>,
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "alignSelf": "flex-start",
              "color": "#FFF",
              "marginLeft": 60,
              "marginTop": 5,
            }
          }
        >
          verbs
          : 
          NaN%
        </Text>,
      ],
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "#B47AEA",
        "display": "flex",
        "height": 63,
        "justifyContent": "center",
        "overflow": "hidden",
        "position": "absolute",
        "top": 0,
        "width": "100%",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "borderColor": "#F5E663",
                  "borderRadius": 5,
                  "borderWidth": 2,
                  "height": 20,
                  "marginTop": 15,
                  "width": 260,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#F5E663",
                    "borderColor": "#F5E663",
                    "borderLeftWidth": 2,
                    "borderRadius": 2,
                    "height": 16,
                    "width": "NaN%",
                  }
                }
              />
            </View>,
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "alignSelf": "flex-end",
                  "color": "#FFF",
                  "fontSize": 20,
                  "marginLeft": 15,
                }
              }
            >
               pts
            </Text>,
          ],
          "style": Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <View
                style={
                  Object {
                    "backgroundColor": "#F5E663",
                    "borderColor": "#F5E663",
                    "borderLeftWidth": 2,
                    "borderRadius": 2,
                    "height": 16,
                    "width": "NaN%",
                  }
                }
              />,
              "style": Object {
                "borderColor": "#F5E663",
                "borderRadius": 5,
                "borderWidth": 2,
                "height": 20,
                "marginTop": 15,
                "width": 260,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "style": Object {
                  "backgroundColor": "#F5E663",
                  "borderColor": "#F5E663",
                  "borderLeftWidth": 2,
                  "borderRadius": 2,
                  "height": 16,
                  "width": "NaN%",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": Array [
                undefined,
                " pts",
              ],
              "ellipsizeMode": "tail",
              "style": Object {
                "alignSelf": "flex-end",
                "color": "#FFF",
                "fontSize": 20,
                "marginLeft": 15,
              },
            },
            "ref": null,
            "rendered": Array [
              undefined,
              " pts",
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": Array [
            "verbs",
            ": ",
            "NaN%",
          ],
          "ellipsizeMode": "tail",
          "style": Object {
            "alignSelf": "flex-start",
            "color": "#FFF",
            "marginLeft": 60,
            "marginTop": 5,
          },
        },
        "ref": null,
        "rendered": Array [
          "verbs",
          ": ",
          "NaN%",
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                Object {
                  "borderColor": "#F5E663",
                  "borderRadius": 5,
                  "borderWidth": 2,
                  "height": 20,
                  "marginTop": 15,
                  "width": 260,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#F5E663",
                    "borderColor": "#F5E663",
                    "borderLeftWidth": 2,
                    "borderRadius": 2,
                    "height": 16,
                    "width": "NaN%",
                  }
                }
              />
            </View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "alignSelf": "flex-end",
                  "color": "#FFF",
                  "fontSize": 20,
                  "marginLeft": 15,
                }
              }
            >
               pts
            </Text>
          </View>,
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "alignSelf": "flex-start",
                "color": "#FFF",
                "marginLeft": 60,
                "marginTop": 5,
              }
            }
          >
            verbs
            : 
            NaN%
          </Text>,
        ],
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "#B47AEA",
          "display": "flex",
          "height": 63,
          "justifyContent": "center",
          "overflow": "hidden",
          "position": "absolute",
          "top": 0,
          "width": "100%",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View
                style={
                  Object {
                    "borderColor": "#F5E663",
                    "borderRadius": 5,
                    "borderWidth": 2,
                    "height": 20,
                    "marginTop": 15,
                    "width": 260,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "#F5E663",
                      "borderColor": "#F5E663",
                      "borderLeftWidth": 2,
                      "borderRadius": 2,
                      "height": 16,
                      "width": "NaN%",
                    }
                  }
                />
              </View>,
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "alignSelf": "flex-end",
                    "color": "#FFF",
                    "fontSize": 20,
                    "marginLeft": 15,
                  }
                }
              >
                 pts
              </Text>,
            ],
            "style": Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <View
                  style={
                    Object {
                      "backgroundColor": "#F5E663",
                      "borderColor": "#F5E663",
                      "borderLeftWidth": 2,
                      "borderRadius": 2,
                      "height": 16,
                      "width": "NaN%",
                    }
                  }
                />,
                "style": Object {
                  "borderColor": "#F5E663",
                  "borderRadius": 5,
                  "borderWidth": 2,
                  "height": 20,
                  "marginTop": 15,
                  "width": 260,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "style": Object {
                    "backgroundColor": "#F5E663",
                    "borderColor": "#F5E663",
                    "borderLeftWidth": 2,
                    "borderRadius": 2,
                    "height": 16,
                    "width": "NaN%",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": Array [
                  undefined,
                  " pts",
                ],
                "ellipsizeMode": "tail",
                "style": Object {
                  "alignSelf": "flex-end",
                  "color": "#FFF",
                  "fontSize": 20,
                  "marginLeft": 15,
                },
              },
              "ref": null,
              "rendered": Array [
                undefined,
                " pts",
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": Array [
              "verbs",
              ": ",
              "NaN%",
            ],
            "ellipsizeMode": "tail",
            "style": Object {
              "alignSelf": "flex-start",
              "color": "#FFF",
              "marginLeft": 60,
              "marginTop": 5,
            },
          },
          "ref": null,
          "rendered": Array [
            "verbs",
            ": ",
            "NaN%",
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#B47AEA",
      "display": "flex",
      "height": 63,
      "justifyContent": "center",
      "overflow": "hidden",
      "position": "absolute",
      "top": 0,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        Object {
          "borderColor": "#F5E663",
          "borderRadius": 5,
          "borderWidth": 2,
          "height": 20,
          "marginTop": 15,
          "width": 260,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#F5E663",
            "borderColor": "#F5E663",
            "borderLeftWidth": 2,
            "borderRadius": 2,
            "height": 16,
            "width": "NaN%",
          }
        }
      />
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "alignSelf": "flex-end",
          "color": "#FFF",
          "fontSize": 20,
          "marginLeft": 15,
        }
      }
    >
       pts
    </Text>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "alignSelf": "flex-start",
        "color": "#FFF",
        "marginLeft": 60,
        "marginTop": 5,
      }
    }
  >
    basics 1
    : 
    NaN%
  </Text>
</View>
`;
